--- a/views/home.html
+++ b/views/home.html
@@ -350,7 +350,7 @@ font-family: 'New Rocker',cursive;
 
 <br>
 
-<a id="one" href="/api">DOCUMENTATION</a>
+<a id="one" href="/api">Api Docs</a>
 
 <script type="text/javascript">
 
