--- a/views/index.html
+++ b/views/index.html
@@ -1058,7 +1058,7 @@ button1:hover {
 
 			<br><br><p><b>
 
-						API KEY :<br>🙀 [ Free ] <a href="wa.me/6285803583481"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br><br>
+						API KEY :<br>🙀 [ Free ] <a href="http://wa.me/6285803583481"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br><br>
 
 					<p>
 					</b>
@@ -1197,7 +1197,7 @@ document.getElementById("jam").innerHTML = tanggal.getHours()+":"+tanggal.getMin
 					// Ketika countdown timer sudah berakhir Maka Tulisan Berakhir
 					if (distance < 0) {
 						clearInterval(x);
-						document.getElementById("time").innerHTML = "Berakhir";
+						document.getElementById("time").innerHTML = "Waiting";
 					}
 				}, 1000);
 			</script>
