--- a/views/index.html
+++ b/views/index.html
@@ -1153,7 +1153,7 @@ button1:hover {
 <script>
   function getvisitor(){
               var xhr = new XMLHttpRequest();
-              var url = 'https://api.countapi.xyz/hit/api-BetaBotz.herokuapp.com/visits';
+              var url = 'https://api.countapi.xyz/hit/api-alphabot.herokuapp.com/visits';
               xhr.onloadend = function(){
              data = JSON.parse(this.responseText);
   document.getElementById("visitor").textContent = data.value
