--- a/views/index.html
+++ b/views/index.html
@@ -1174,7 +1174,7 @@ document.getElementById("jam").innerHTML = tanggal.getHours()+":"+tanggal.getMin
 </script>
 <script>
 				// Akhir Hitungan Mundur
-				var countDownDate = new Date("Mei 14, 2022 00:01:59").getTime();
+				var countDownDate = new Date("Menuju Ramadhan 00:00:00").getTime();
 
 				// Update Hitungan Mundur Setiap 1 Detik
 				var x = setInterval(function() {
