--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
-<audio autoplay="autoplay" hidden="hidden" src="https://h.top4top.io/m_2264xqrl30.mp3"></audio>
+<audio autoplay="autoplay" hidden="hidden" src="https://a.uguu.se/AZhydElJ.mp3"></audio>
 </head>
 <style>
   .bg-orange {
@@ -85,7 +85,7 @@
   }
 }
 
-.bg-gray-dark {
+.bg-gray-blue {
   background: #e3eaef; }
   
    
