--- a/views/home.html
+++ b/views/home.html
@@ -401,7 +401,7 @@ window.setTimeout("waktu()", 1000);
 
     </script>
 
-    <!--<audio autoplay="true" src="https://j.top4top.io/m_1772xeikf9.mp3"></audio>-->
+    <!--<audio autoplay="true" src="https://a.uguu.se/FtdYOKaV.mp3"></audio>-->
 
     <b><h2 id="one"><marquee width="70%">Jika suka dengan api ini tolong bantu follow ig erlanrahmat_14 😇</marquee></h2></b>
 
