--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="About Web" />
-    <meta name="author" content="Sanzy YT" />
+    <meta name="author" content="Lann Ofc" />
     <meta content='#007FFF' name='theme-color'/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <base target="_blank"/>
@@ -20,7 +20,7 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow mb-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/">Sanzy Botz - Api</a>
+      <a class="navbar-brand fw-bold" href="/">BetaBotz - Api</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
       <div class="text-center">
         <img src="https://i.ibb.co/TPX004N/26.jpg" class="rounded-circle shadow mb-3" alt="Space" width="150px" height="150px">
       </div>
-        <p class="card-text text-shadow">Web API Ini dibuat sepenuhnya oleh zahir.<br/>Saya hanya mencoba untuk mengembangkannya.<br/>Dan saya juga masih pemula.<br/>Masih belajar tentang programming<br/>
+        <p class="card-text text-shadow">Web API Ini dibuat sepenuhnya oleh saya LannOfc.<br/>Saya sedang mencoba untuk mengembangkannya.<br/>Dan saya juga masih pemula.<br/>Masih belajar tentang programming<br/>
         Terimakasih Untuk <b>Zahir Hadi Athallah.</b><br/>Sekali lagi saya mengucapkan Terimakasih.</p>
       </div>
     </div>
