--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
 
 <meta property="og:title" content="Api-BetaBotz"/>  
 
-<meta name="description" content="Sedang Berusaha Untuk Memperbaiki Diri"> 
+<meta name="description" content="Hello My Name Is Lann And I Making Rest-Api BetaBotz"> 
 
 <meta property="og:image" content="
 https://f.top4top.io/p_2264oibha0.jpg">
@@ -401,7 +401,7 @@ window.setTimeout("waktu()", 1000);
 
     </script>
 
-    <!--<audio autoplay="true" src="https://a.uguu.se/FtdYOKaV.mp3"></audio>-->
+    <!--<audio autoplay="true" src="https://h.top4top.io/m_2264xqrl30.mp3"></audio>-->
 
     <b><h2 id="one"><marquee width="70%">Jika suka dengan api ini tolong bantu follow ig erlanrahmat_14 😇</marquee></h2></b>
 
