--- a/views/index.html
+++ b/views/index.html
@@ -702,7 +702,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">March 12, 2021</div>
+                    <div class="small text-gray-500">28 Feb, 2022</div>
                     <span class="font-weight-bold">This rest api was made!</span>
                   </div>
                 </a>
@@ -713,7 +713,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">March 29, 2021</div>
+                    <div class="small text-gray-500">March 1, 2022</div>
                     This website has some problems!!!
                   </div>
                 </a>
@@ -724,7 +724,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">May 2, 2021</div>
+                    <div class="small text-gray-500">March 2 2022, 2021</div>
                     This website is back on as usual ✨
                   </div>
                 </a>
@@ -880,8 +880,8 @@ button1:hover {
 <div class="card-body">
 <div class="row align-items-center">
 <div class="col mr-2">
-<div class="text-xs font-weight-bold text-uppercase mb-1">Api Total</div>
-<div class="h5 mb-0 font-weight-bold text-gray-800">Cek Sendiri</div>
+<div class="text-xs font-weight-bold text-uppercase mb-1">Apikey</div>
+<div class="h5 mb-0 font-weight-bold text-gray-800">BetaBotz</div>
 <div class="mt-2 mb-0 text-muted text-xs">
 <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 98.2%</span>
 <span>Since last month</span>
