--- a/views/index.html
+++ b/views/index.html
@@ -881,10 +881,10 @@ button1:hover {
 <div class="row align-items-center">
 <div class="col mr-2">
 <div class="text-xs font-weight-bold text-uppercase mb-1">Apikey</div>
-<div class="h5 mb-0 font-weight-bold text-gray-800">BetaBotz</div>
+<div class="h5 mb-0 font-weight-bold text-gray-800">Beta Botz</div>
 <div class="mt-2 mb-0 text-muted text-xs">
 <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 98.2%</span>
-<span>Since last month</span>
+<span>Status Active</span>
 </div>
 </div>
 <div class="col-auto">
@@ -962,370 +962,4 @@ button1:hover {
   <div class="text-xs font-weight-bold text-uppercase mb-1">Info</div>
   <div class="h5 mb-0 font-weight-bold text-gray-800">Menuju Idul Fitri</div>
   <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 
-  <b id="time">3Hari  6Jam 59Menit 6Detik </b><br></span>
-  <div class="mt-2 mb-0 text-muted text-xs">
-  </div>
-  </div>
-  <div class="col-auto">
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>-->
-<div class="col-xl-3 col-md-6 mb-4">
-
-<div class="card h-100">
-
-<div class="card-body">
-
-<div class="row no-gutters align-items-center">
-
-<div class="col mr-2">
-
-<div class="text-xs font-weight-bold text-uppercase mb-1">Countdown</div>
-
-<div class="h5 mb-0 font-weight-bold text-gray-800">
-
-<div class="time" id="time">1Hari 1Jam 2Menit 20Detik</div>
-
-</div>
-
-<div class="mt-2 mb-0 text-muted text-xs">
-
-</span>
-
-<span>Menuju Ramadhan</span>
-
-</div>
-
-</div>
-
-<div class="col-auto">
-
-<i class="fas fa-star-and-crescent fa-2x text-primary"></i>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-<div class="col-xl-3 col-md-6 mb-4">
-<div class="card h-100">
-<div class="card-body">
-<div class="row no-gutters align-items-center">
-<div class="col mr-2">
-<div class="text-xs font-weight-bold text-uppercase mb-1">Visitor</div>
-<div class="h5 mb-0 font-weight-bold text-gray-800">
-<div class="visitor" id="visitor">00</div>
-</div>
-<div class="mt-2 mb-0 text-muted text-xs">
-
-</span>
-<span>This web visitor</span>
-</div>
-</div>
-<div class="col-auto">
-<i class="fas fa-eye fa-2x text-primary"></i>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-          <!-- Batassss -->
- <div class="col-xl-4 col-lg-5">
-              <div class="card mb-4">
-              	<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-              	<h6 class="m-0 font-weight-bold text-primary">A little information</h6>
-                  <div class="dropdown no-arrow">
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                      aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">Select Periode</div>
-                      <a class="dropdown-item" href="#">Today</a>
-                      <a class="dropdown-item" href="#">Week</a>
-                      <a class="dropdown-item" href="#">This Year</a>
-                    </div>
-                  </div>
-                </div>
-		      <div class="card-body">
-
-		<img src="https://f.top4top.io/p_2264oibha0.jpg" alt="My Life" width="100%" >
-
-			<br><br><p><b>
-
-						API KEY :<br>🙀 [ Free ] <a href="http://wa.me/6285803583481"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br><br>
-
-					<p>
-					</b>
-					</p>
-				</div>
-			</div>
-		</div>
-            <!-- Message From Customer-->
-<div class="col-xl-3 col-md-6 mb-4">
-                <div class="card h-100">
-                  <div class="card-body">
-                    <h4 class="card-title text-center">TicTacToe</h4>
-                    <h6 class="card-title text-center">Menangkan Untuk Mendapatkan Apikey</h6>
-                    <hr>
-          <div class="container1">
-        <div class="play-area">
-        </div>
-        <h21 class="text-center" id="winner"></h21>
-        <button1 onclick="reset_board()">REPEAT</button1>
-    </div>
-    </div>
-    </div>
-    </div>
-<!-- Pie Chart -->
-            
-<!--Row-->
-
-<!--<div class="card-body">
-                  <div class="mb-3">
-                    <div class="small text-gray-500">Hai Mastah Welcome
-                      <div class="small float-right"><b>09-05-2021</b></div>
-                    </div>
-                  </div>
-                  <div class="mb-3">
-                    <div class="small text-gray-500">Pemula Stah Jangan Di bully:(
-                      <div class="small float-right"><b>09-05-2021</b></div>
-                    </div>
-                  </div>
-                  <div class="mb-3">
-                    <div class="small text-gray-500">Update NSFW&ASUPAN!!!
-                      <div class="small float-right"><b>11-05-2021</b></div>
-                    </div>
-                  </div>
-                  <div class="mb-3">
-                  </div>
-                  <div class="mb-3">
-                  </div>
-                </div>
-                <div class="card-footer text-center">
-                </div>
-              </div>
-            </div>
-            
-          <!--Row-->
-
-          <div class="row">
-            <div class="col-lg-12 text-center">
-              <p>Nemu Bug? Harap Lapor Ya!!! : <a href="https://wa.me/6285803583481"
-                  class="btn btn-primary btn-sm" target="_blank"><i class="fas fa-bug"></i>&nbsp;Bug</a></p>
-            </div>
-          </div>
-
-        </div>
-        <!---Container Fluid-->
-      </div>
-      <!-- Footer -->
-      <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-          <div class="copyright text-center my-auto">
-            <span>Copyright &copy; 2022 -
-              <b><a href="https://instagram.com/erlanrahmat_14" target="_blank">BetaBotz</a> .Allright reserved</b>
-            </span>
-          </div>
-        </div>
-      </footer>
-      <!-- Footer -->
-    </div>
-  </div>
-
-  <!-- Scroll to top -->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-   <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="js/ruang-admin.js"></script>
-  <script src="vendor/chart.js/Chart.min.js"></script>
-  <script src="js/demo/chart-area-demo.js"></script>  
-</body>
-<script>
-  function getvisitor(){
-              var xhr = new XMLHttpRequest();
-              var url = 'https://api.countapi.xyz/hit/api-alphabot.herokuapp.com/visits';
-              xhr.onloadend = function(){
-             data = JSON.parse(this.responseText);
-  document.getElementById("visitor").textContent = data.value
-              };
-              xhr.open("GET", url, true);
-              xhr.send();
-  }
-  
-</script>
-<script type="text/javascript">
-// 1 detik = 1000
-window.setTimeout("waktu()",1000);  
-function waktu() {   
-var tanggal = new Date();  
-setTimeout("waktu()",1000);  
-document.getElementById("jam").innerHTML = tanggal.getHours()+":"+tanggal.getMinutes()+":"+tanggal.getSeconds();
-}
-</script>
-<script>
-				// Akhir Hitungan Mundur
-				var countDownDate = new Date("2 April 2022 00:00:00").getTime();
-
-				// Update Hitungan Mundur Setiap 1 Detik
-				var x = setInterval(function() {
-
-					// Mengambil Tanggal Dan Waktu
-					var now = new Date().getTime();
-
-					// Find the distance between now and the count down date
-					var distance = countDownDate - now;
-
-					// Kalkulator Waktu Hari, Jam, Menit, Detik 
-					var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-					var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-					var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-					var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-					// Menampilkan Hasil Di Dalam element Menggunakan id="time"
-					document.getElementById("time").innerHTML = days + "Hari  " + hours + "Jam " + minutes + "Menit " + seconds + "Detik ";
-
-					// Ketika countdown timer sudah berakhir Maka Tulisan Berakhir
-					if (distance < 0) {
-						clearInterval(x);
-						document.getElementById("time").innerHTML = "Dimulai";
-					}
-				}, 1000);
-			</script>
-<script>
-	const player = "O";
-const computer = "X";
-
-let board_full = false;
-let play_board = ["", "", "", "", "", "", "", "", ""];
-
-const board_container = document.querySelector(".play-area");
-
-const winner_statement = document.getElementById("winner");
-
-check_board_complete = () => {
-  let flag = true;
-  play_board.forEach(element => {
-    if (element != player && element != computer) {
-      flag = false;
-    }
-  });
-  board_full = flag;
-};
-
-
-const check_line = (a, b, c) => {
-  return (
-    play_board[a] == play_board[b] &&
-    play_board[b] == play_board[c] &&
-    (play_board[a] == player || play_board[a] == computer)
-  );
-};
-
-const check_match = () => {
-  for (i = 0; i < 9; i += 3) {
-    if (check_line(i, i + 1, i + 2)) {
-      document.querySelector(`#block_${i}`).classList.add("win");
-      document.querySelector(`#block_${i + 1}`).classList.add("win");
-      document.querySelector(`#block_${i + 2}`).classList.add("win");
-      return play_board[i];
-    }
-  }
-  for (i = 0; i < 3; i++) {
-    if (check_line(i, i + 3, i + 6)) {
-      document.querySelector(`#block_${i}`).classList.add("win");
-      document.querySelector(`#block_${i + 3}`).classList.add("win");
-      document.querySelector(`#block_${i + 6}`).classList.add("win");
-      return play_board[i];
-    }
-  }
-  if (check_line(0, 4, 8)) {
-    document.querySelector("#block_0").classList.add("win");
-    document.querySelector("#block_4").classList.add("win");
-    document.querySelector("#block_8").classList.add("win");
-    return play_board[0];
-  }
-  if (check_line(2, 4, 6)) {
-    document.querySelector("#block_2").classList.add("win");
-    document.querySelector("#block_4").classList.add("win");
-    document.querySelector("#block_6").classList.add("win");
-    return play_board[2];
-  }
-  return "";
-};
-
-const check_for_winner = () => {
-  let res = check_match()
-  if (res == player) {
-    winner.innerText = "You Win Apikey: BetaBotz";
-    winner.classList.add("playerWin");
-    board_full = true
-  } else if (res == computer) {
-    winner.innerText = "Awokawok Kalah Ama Komputer:v";
-    winner.classList.add("computerWin");
-    board_full = true
-  } else if (board_full) {
-    winner.innerText = "Draw!";
-    winner.classList.add("draw");
-  }
-};
-
-
-const render_board = () => {
-  board_container.innerHTML = ""
-  play_board.forEach((e, i) => {
-    board_container.innerHTML += `<div id="block_${i}" class="block" onclick="addPlayerMove(${i})">${play_board[i]}</div>`
-    if (e == player || e == computer) {
-      document.querySelector(`#block_${i}`).classList.add("occupied");
-    }
-  });
-};
-
-const game_loop = () => {
-  render_board();
-  check_board_complete();
-  check_for_winner();
-}
-
-const addPlayerMove = e => {
-  if (!board_full && play_board[e] == "") {
-    play_board[e] = player;
-    game_loop();
-    addComputerMove();
-  }
-};
-
-const addComputerMove = () => {
-  if (!board_full) {
-    do {
-      selected = Math.floor(Math.random() * 9);
-    } while (play_board[selected] != "");
-    play_board[selected] = computer;
-    game_loop();
-  }
-};
-
-const reset_board = () => {
-  play_board = ["", "", "", "", "", "", "", "", ""];
-  board_full = false;
-  winner.classList.remove("playerWin");
-  winner.classList.remove("computerWin");
-  winner.classList.remove("draw");
-  winner.innerText = "";
-  render_board();
-};
-
-//initial render
-render_board();
-</script>
-
-</html>
+  <b id="time">3Hari  6Jam 
