--- a/views/index.html
+++ b/views/index.html
@@ -253,9 +253,9 @@ button1:hover {
             <a class="collapse-item" href="api/tiktod/?url=MASUKIN_URL&apikey=BetaBotz">Tiktok</a>
             <h6 class="collapse-header">Stalker Features</h6>
             <a class="collapse-item" href="api/tiktod/stalk/?username=MASUKIN_USERNAME&apikey=BetaBotz">Tiktok Stalk</a>
-            <a class="collapse-item" href="api/ig/stalk?username=zeeoneofc&apikey=BetaBotz">Instagram Stalk</a>
-            <a class="collapse-item" href="api/github/stalk?username=zeeoneofc&apikey=BetaBotz">Github Stalk</a>
-            <a class="collapse-item" href="api/repository/stalk?username=api-zeeoneofc&apikey=BetaBotz">Repository Stalk</a>
+            <a class="collapse-item" href="api/ig/stalk?username=erlanrahmat_14&apikey=BetaBotz">Instagram Stalk</a>
+            <a class="collapse-item" href="api/github/stalk?username=ERLANRAHMAT&apikey=BetaBotz">Github Stalk</a>
+            <a class="collapse-item" href="api/repository/stalk?username=api-BetaBotz&apikey=BetaBotz">Repository Stalk</a>
             </div>
         </div>
       </li>
@@ -634,9 +634,9 @@ button1:hover {
             </a>
       </li>
        <li class="nav-item">
-            <a class="nav-link collapsed" href="https://youtu.be/rrBSSnfinhg">
-            <i class="fab fa-fw fa-youtube"></i>
-                    <span>YouTube</span>
+            <a class="nav-link collapsed" href="betaapikey.herokuapp.com">
+            <i class="fab fa-fw fa-website"></i>
+                    <span>Website</span>
             </a>
       </li>
       <li class="nav-item">
@@ -1058,7 +1058,7 @@ button1:hover {
 
 			<br><br><p><b>
 
-						API KEY :<br>🙀 [ Free ] <a href="wa.me/6285803583481"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br><br>
+						API KEY :<br>🙀 [ Free ] <a href="http://wa.me/6285803583481"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://github.com/ERLANRAHMAT"><strong>KLIK DISINI</strong></a><br><br>
 
 					<p>
 					</b>
