--- a/views/index.html
+++ b/views/index.html
@@ -634,7 +634,7 @@ button1:hover {
             </a>
       </li>
        <li class="nav-item">
-            <a class="nav-link collapsed" href="betaapikey.herokuapp.com">
+            <a class="nav-link collapsed" href="https://betaapikey.herokuapp.com">
             <i class="fab fa-fw fa-chrome"></i>
                     <span>Website</span>
             </a>
